# SurfaceScan

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
scanner/: __init__.py  api.py  cli.py  test_report.py
scanner/surfacescan/: __main__.py  cli.py
scanner/tests/: __init__.py  test_public_package.py  test_scan.py
surfacescan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
