[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfacescan"
version = "0.1.0"
description = "TCP port scanner with CLI and reusable Python API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Erick"}]
keywords = ["scanner", "ports", "security", "network"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
surfacescan = "surfacescan.cli:main"

[tool.setuptools.packages.find]
include = ["scanner", "scanner.*", "surfacescan", "surfacescan.*"]